--- a/config_en.json
+++ b/config_en.json
@@ -3,36 +3,29 @@
 {
 "layout":"logo",
 "showMenu":true,
-"showSearch":false,
 "showLogo":true,
-"showCart":true,
-"showNotification":false,
-"menuIcon":{
-"name":"square_grid_3x2",
-"fontFamily":"CupertinoIcons"}
-},
-{
-"isSafeArea":false,
 "showSearch":true,
-"usePrimaryColor":true,
-"borderInput":true,
-"title":"Search",
-"alignment":"centerLeft",
-"fontWeight":0,
-"radius":9.0,
-"fontSize":18.0,
-"textOpacity":0.8,
-"marginLeft":20.0,
-"marginRight":20.0,
-"marginBottom":0.0,
-"marginTop":10.0,
-"paddingLeft":12.0,
-"paddingRight":15.0,
-"paddingTop":0.0,
-"paddingBottom":0.0,
-"height":45.0,
-"rotate":[],
-"layout":"header_search"
+"showCart":false,
+"showNotification":true,
+"showBadgeCart":true,
+"opacity":1.0,
+"iconOpacity":0.0,
+"iconRadius":6.0,
+"iconSpreadRadius":0.0,
+"iconSize":24.0,
+"logoSize":50.0,
+"menuIcon":{
+"name":"decrease_indent",
+"fontFamily":"CupertinoIcons"
+},
+"textConfig":{
+"text":"SHAJGOAJ",
+"fontFamily":"Roboto",
+"fontSize":25.499999999999993,
+"color":"#3FC1BE",
+"x":0.0,
+"y":-1.0,
+"enableShadow":false}
 },
 {
 "layout":"bannerImage",
@@ -151,7 +144,7 @@
 {
 "layout":"bannerImage",
 "design":"static",
-"fit":"fitWidth",
+"fit":"fill",
 "marginLeft":5.0,
 "items":[
 {
@@ -165,7 +158,7 @@
 }
 ],
 "marginBottom":6.0,
-"height":0.1,
+"height":0.15,
 "marginRight":5.0,
 "marginTop":6.0,
 "enableParallax":false,
@@ -497,43 +490,41 @@
 "boxShadow":null
 },
 {
+"name":"",
 "layout":"threeColumn",
-"name":"Recent Collections",
-"isSnapping":true,
+"isSnapping":false,
 "rows":2,
 "columns":0,
-"imageBoxfit":"contain",
-"imageRatio":1.032813970726657,
+"imageBoxfit":"fitWidth",
+"imageRatio":1.1369484775037653,
 "hMargin":6.0,
 "vMargin":0.0,
-"hPadding":8.0,
+"hPadding":0.0,
 "vPadding":0.0,
 "showStockStatus":true,
-"enableRating":false,
+"enableRating":true,
 "hideTitle":false,
 "hideStore":false,
 "hidePrice":false,
 "featured":false,
 "showHeart":false,
 "showCartButton":false,
-"cartIconRadius":20.0,
+"cartIconRadius":9.0,
 "showQuantity":false,
 "showCartIconColor":true,
-"showCartIcon":false,
+"showCartIcon":true,
 "enableBottomAddToCart":false,
 "cardDesign":"flatSimple",
-"borderRadius":12.0,
-"category":"24",
+"borderRadius":3.0,
 "image":"",
 "useCircularRadius":true,
 "useSort":false,
 "showCategory":false,
-"titleLine":1,
 "order":"asc",
-"orderby":"price",
+"orderby":"menu_order",
 "backgroundRadius":10.0,
 "showCountDown":false,
-"onSale":true,
+"onSale":false,
 "hideEmptyProductListRating":false,
 "showOnlyImage":false,
 "showCartButtonWithQuantity":false,
@@ -541,8 +532,7 @@
 "parallaxImageRatio":1.2,
 "hideEmptyProductLayout":false,
 "productListItemHeight":110.0,
-"enableAutoSliding":true,
-"durationAutoSliding":11,
+"enableAutoSliding":false,
 "productType":false
 },
 {
@@ -726,6 +716,53 @@
 "boxShadow":null
 },
 {
+"name":"",
+"layout":"threeColumn",
+"isSnapping":false,
+"rows":2,
+"columns":0,
+"imageBoxfit":"fitWidth",
+"imageRatio":1.1369484775037653,
+"hMargin":6.0,
+"vMargin":0.0,
+"hPadding":0.0,
+"vPadding":0.0,
+"showStockStatus":true,
+"enableRating":true,
+"hideTitle":false,
+"hideStore":false,
+"hidePrice":false,
+"featured":false,
+"showHeart":false,
+"showCartButton":false,
+"cartIconRadius":9.0,
+"showQuantity":false,
+"showCartIconColor":true,
+"showCartIcon":true,
+"enableBottomAddToCart":false,
+"cardDesign":"flatSimple",
+"borderRadius":3.0,
+"image":"",
+"useCircularRadius":true,
+"useSort":false,
+"showCategory":false,
+"titleLine":2,
+"order":"asc",
+"orderby":"menu_order",
+"backgroundRadius":10.0,
+"showCountDown":false,
+"onSale":false,
+"hideEmptyProductListRating":false,
+"showOnlyImage":false,
+"showCartButtonWithQuantity":false,
+"parallax":false,
+"parallaxImageRatio":1.2,
+"hideEmptyProductLayout":false,
+"productListItemHeight":110.0,
+"enableAutoSliding":false,
+"productType":false
+},
+{
 "isSafeArea":false,
 "showSearch":false,
 "usePrimaryColor":true,
@@ -904,66 +941,125 @@
 "enableBackground":false,
 "parallax":false,
 "boxShadow":null
+},
+{
+"name":"",
+"layout":"twoColumn",
+"isSnapping":false,
+"rows":2,
+"columns":0,
+"imageBoxfit":"fitWidth",
+"imageRatio":1.1369484775037653,
+"hMargin":6.0,
+"vMargin":0.0,
+"hPadding":0.0,
+"vPadding":0.0,
+"showStockStatus":false,
+"enableRating":false,
+"hideTitle":false,
+"hideStore":true,
+"hidePrice":false,
+"featured":false,
+"showHeart":false,
+"showCartButton":false,
+"cartIconRadius":9.0,
+"showQuantity":false,
+"showCartIconColor":true,
+"showCartIcon":true,
+"enableBottomAddToCart":false,
+"cardDesign":"simpleCard",
+"borderRadius":3.0,
+"image":"",
+"useCircularRadius":true,
+"useSort":false,
+"showCategory":false,
+"titleLine":1,
+"order":"asc",
+"orderby":"menu_order",
+"backgroundRadius":10.0,
+"showCountDown":false,
+"onSale":false,
+"hideEmptyProductListRating":false,
+"showOnlyImage":false,
+"showCartButtonWithQuantity":false,
+"parallax":false,
+"parallaxImageRatio":1.2,
+"hideEmptyProductLayout":false,
+"productListItemHeight":110.0,
+"enableAutoSliding":false,
+"productType":false
+},
+{
+"type":"html",
+"data":"",
+"height":200.0,
+"spacing":{
+"margin":null,
+"padding":null
+},
+"script":null,
+"navigator":null,
+"layout":"webEmbed"
 }
 ],
 "Setting":{
 "TabBarConfig":{
-"enableOnTop":false,
-"color":null,
-"radiusTopLeft":0,
-"bottomBarStyle":"static",
-"paddingRight":0,
-"radiusTopRight":0,
-"TabBarIndicator":{
-"strokeWidth":0,
-"color":null,
-"horizontalPadding":0,
-"topRightRadius":0,
-"tabPosition":"bottom",
-"bottomRightRadius":0,
-"bottomLeftRadius":0,
-"topLeftRadius":0,
-"paintingStyle":"fill",
-"distanceFromCenter":0,
-"radius":0,
-"verticalPadding":0,
-"height":0
-},
-"showMinimize":false,
-"marginRight":0,
-"enableDivider":true,
-"paddingBottom":0,
-"indicatorStyle":"dot",
 "enable":true,
-"radiusBottomRight":0,
-"iconSize":22.968195913186673,
-"showFloatingClip":false,
-"paddingTop":0,
-"isSafeArea":true,
-"TabBarFloating":{
-"elevation":2,
-"color":"ffff672d",
-"width":50,
-"floatingType":"rectangle",
-"location":"centerDocked",
-"isCoverMode":false,
-"position":2,
-"notchMargin":4,
-"radius":50,
-"height":50
+"showMinimize":false,
+"isSafeArea":false,
+"color":"fff654f0",
+"colorCart":"fff654f0",
+"colorIcon":"ffffffff",
+"colorActiveIcon":"ffffffff",
+"iconSize":22.955647901669458,
+"indicatorStyle":"rectangular",
+"showFloatingClip":true,
+"showFloating":false,
+"enableOnTop":false,
+"enableDivider":true,
+"radiusTopLeft":15.079123349164956,
+"radiusTopRight":15.047170605431592,
+"radiusBottomLeft":15.03100081501931,
+"radiusBottomRight":15.034404981421897,
+"paddingLeft":0.0,
+"paddingRight":0.0,
+"paddingBottom":10.006131677365229,
+"paddingTop":9.960136747221199,
+"marginTop":0.0,
+"marginBottom":14.973564791065872,
+"marginLeft":14.976930273759336,
+"marginRight":15.012519286150008,
+"bottomBarStyle":"slideEffect",
+"alwaysShowTabBar":false,
+"TabBarIndicator":{
+"height":0.0,
+"tabPosition":"bottom",
+"topRightRadius":9.138236789907289,
+"topLeftRadius":9.266948361796246,
+"bottomRightRadius":8.866903346613203,
+"bottomLeftRadius":9.173194264700902,
+"color":"fff654f0",
+"horizontalPadding":10.01247069941136,
+"verticalPadding":0.0,
+"strokeWidth":0.0,
+"radius":0.0,
+"distanceFromCenter":0.0,
+"paintingStyle":"fill"
 },
-"showFloating":true,
-"colorActiveIcon":"ffff672d",
-"colorCart":null,
-"radiusBottomLeft":0,
-"marginLeft":0,
-"colorIcon":"ff7a7b7f",
-"marginBottom":0,
-"paddingLeft":0,
-"marginTop":0
+"TabBarFloating":{
+"position":0,
+"radius":50.0,
+"color":null,
+"location":null,
+"width":50.0,
+"height":50.0,
+"elevation":2.0,
+"floatingType":"rectangle",
+"notchMargin":4.0,
+"isCoverMode":false}
 },
 "ProductDetail":"simpleType",
-"MainColor":"#3FC1BE",
+"MainColor":null,
 "ShowChat":true,
 "AgeRestriction":{
 "enable":false,
@@ -1035,7 +1131,7 @@
 "marginTop":0,
 "key":"XzJXbvdein"
 },
-"enable":true,
+"enable":false,
 "width":124,
 "canDrag":true,
 "height":126
@@ -1099,10 +1195,9 @@
 "fontFamily":"CupertinoIcons",
 "pos":100,
 "icon":"home",
-"key":"cnvgITsaij"
+"key":"BLNeIFLKWX"
 },
 {
-"key":"DoDwSORdTj",
 "layout":"category",
 "icon":"rectangle_grid_1x2",
 "fontFamily":"CupertinoIcons",
@@ -1113,7 +1208,8 @@
 "categoryLayout":"card",
 "parallax":false,
 "parallaxImageRatio":1.2,
-"showSearch":true
+"showSearch":true,
+"key":"rfLETcWNui"
 },
 {
 "layout":"search",
@@ -1121,27 +1217,27 @@
 "size":24,
 "pos":300,
 "icon":"search",
-"key":"OcWICNttow"
+"key":"xSjuMuYwWn"
 },
 {
-"layout":"list-blog",
-"fontFamily":"CupertinoIcons",
-"fullscreen":false,
-"pos":400,
-"showOriginalColor":false,
-"defaultTab":false,
-"icon":"videocam_circle_fill",
-"key":"hgTBxJUckv"
-},
-{
+"key":"honGjFoBpF",
 "layout":"videos",
+"icon":"videocam_circle_fill",
 "fontFamily":"CupertinoIcons",
-"fullscreen":false,
-"pos":500,
-"showOriginalColor":false,
+"pos":400,
 "defaultTab":false,
-"icon":"person",
-"key":"VkbjdmsRCe"
+"fullscreen":false,
+"showOriginalColor":false
+},
+{
+"key":"dVllclgWRJ",
+"layout":"wishlist",
+"icon":"arrow_up_bin_fill",
+"fontFamily":"CupertinoIcons",
+"pos":500,
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false
 }
 ],
 "Drawer":{
