--- a/config_en.json
+++ b/config_en.json
@@ -3,7 +3,7 @@
 {
 "layout":"logo",
 "showMenu":true,
-"showLogo":true,
+"showLogo":false,
 "showSearch":true,
 "showCart":false,
 "showNotification":true,
