--- a/config_en.json
+++ b/config_en.json
@@ -4,7 +4,7 @@
 "layout":"logo",
 "showMenu":true,
 "showLogo":false,
-"showSearch":true,
+"showSearch":false,
 "showCart":false,
 "showNotification":true,
 "showBadgeCart":true,
@@ -1006,40 +1006,39 @@
 "TabBarConfig":{
 "enable":true,
 "showMinimize":false,
-"isSafeArea":false,
-"color":"fff654f0",
-"colorCart":"fff654f0",
-"colorIcon":"ffffffff",
-"colorActiveIcon":"ffffffff",
-"iconSize":22.955647901669458,
-"indicatorStyle":"rectangular",
+"isSafeArea":true,
+"color":null,
+"colorCart":"fff436e6",
+"colorIcon":"fffd3cda",
+"colorActiveIcon":"ffff2dc6",
+"iconSize":26.0,
+"indicatorStyle":"material",
 "showFloatingClip":true,
-"showFloating":false,
+"showFloating":true,
 "enableOnTop":false,
 "enableDivider":true,
-"radiusTopLeft":15.079123349164956,
-"radiusTopRight":15.047170605431592,
-"radiusBottomLeft":15.03100081501931,
-"radiusBottomRight":15.034404981421897,
+"radiusTopLeft":0.0,
+"radiusTopRight":0.0,
+"radiusBottomLeft":0.0,
+"radiusBottomRight":0.0,
 "paddingLeft":0.0,
 "paddingRight":0.0,
-"paddingBottom":10.006131677365229,
-"paddingTop":9.960136747221199,
+"paddingBottom":0.0,
+"paddingTop":0.0,
 "marginTop":0.0,
-"marginBottom":14.973564791065872,
-"marginLeft":14.976930273759336,
-"marginRight":15.012519286150008,
-"bottomBarStyle":"opacityEffect",
-"alwaysShowTabBar":false,
+"marginBottom":0.0,
+"marginLeft":0.0,
+"marginRight":0.0,
+"bottomBarStyle":"slideEffect",
 "TabBarIndicator":{
 "height":0.0,
 "tabPosition":"bottom",
-"topRightRadius":9.138236789907289,
-"topLeftRadius":9.266948361796246,
-"bottomRightRadius":8.866903346613203,
-"bottomLeftRadius":9.173194264700902,
-"color":"fff654f0",
-"horizontalPadding":10.01247069941136,
+"topRightRadius":0.0,
+"topLeftRadius":0.0,
+"bottomRightRadius":0.0,
+"bottomLeftRadius":0.0,
+"color":null,
+"horizontalPadding":0.0,
 "verticalPadding":0.0,
 "strokeWidth":0.0,
 "radius":0.0,
@@ -1049,12 +1048,12 @@
 "TabBarFloating":{
 "position":0,
 "radius":50.0,
-"color":null,
-"location":null,
-"width":50.0,
-"height":50.0,
-"elevation":2.0,
-"floatingType":"rectangle",
+"color":"ffff2ddc",
+"location":"startDocked",
+"width":70.261694164508,
+"height":70.44671253505518,
+"elevation":4.0,
+"floatingType":"circle",
 "notchMargin":4.0,
 "isCoverMode":false}
 },
