--- a/config_en.json
+++ b/config_en.json
@@ -501,18 +501,18 @@
 "vMargin":0.0,
 "hPadding":0.0,
 "vPadding":0.0,
-"showStockStatus":true,
-"enableRating":true,
+"showStockStatus":false,
+"enableRating":false,
 "hideTitle":false,
-"hideStore":false,
+"hideStore":true,
 "hidePrice":false,
 "featured":false,
 "showHeart":false,
 "showCartButton":false,
 "cartIconRadius":9.0,
 "showQuantity":false,
-"showCartIconColor":true,
-"showCartIcon":true,
+"showCartIconColor":false,
+"showCartIcon":false,
 "enableBottomAddToCart":false,
 "cardDesign":"flatSimple",
 "borderRadius":3.0,
@@ -532,8 +532,9 @@
 "parallaxImageRatio":1.2,
 "hideEmptyProductLayout":false,
 "productListItemHeight":110.0,
-"enableAutoSliding":false,
-"productType":false
+"enableAutoSliding":true,
+"productType":false,
+"durationAutoSliding":5
 },
 {
 "isSafeArea":false,
@@ -1029,7 +1030,8 @@
 "marginBottom":0.0,
 "marginLeft":0.0,
 "marginRight":0.0,
-"bottomBarStyle":"slideEffect",
+"bottomBarStyle":"static",
+"alwaysShowTabBar":false,
 "TabBarIndicator":{
 "height":0.0,
 "tabPosition":"bottom",
