--- a/config_en.json
+++ b/config_en.json
@@ -1001,60 +1001,58 @@
 ],
 "Setting":{
 "TabBarConfig":{
-"enableOnTop":false,
-"color":null,
-"radiusTopLeft":0,
-"bottomBarStyle":"static",
-"paddingRight":0,
-"radiusTopRight":0,
-"TabBarIndicator":{
-"strokeWidth":0,
-"color":null,
-"horizontalPadding":0,
-"topRightRadius":0,
-"tabPosition":"bottom",
-"bottomRightRadius":0,
-"bottomLeftRadius":0,
-"topLeftRadius":0,
-"paintingStyle":"fill",
-"distanceFromCenter":0,
-"radius":0,
-"verticalPadding":0,
-"height":0
-},
-"showMinimize":false,
-"marginRight":0,
-"enableDivider":true,
-"paddingBottom":0,
-"indicatorStyle":"material",
 "enable":true,
-"radiusBottomRight":0,
-"iconSize":26,
+"showMinimize":false,
+"isSafeArea":false,
+"color":"fffa20d3",
+"colorCart":"fffe2060",
+"colorIcon":"ffffffff",
+"colorActiveIcon":"ff0a0a0a",
+"iconSize":22.955647901669458,
+"indicatorStyle":"material",
 "showFloatingClip":true,
-"paddingTop":0,
-"isSafeArea":true,
-"TabBarFloating":{
-"elevation":4,
-"color":"ffff2ddc",
-"width":70.261694164508,
-"floatingType":"circle",
-"location":"startDocked",
-"isCoverMode":false,
-"position":0,
-"notchMargin":4,
-"radius":50,
-"height":70.44671253505518
+"showFloating":false,
+"enableOnTop":false,
+"enableDivider":true,
+"radiusTopLeft":15.079123349164956,
+"radiusTopRight":15.047170605431592,
+"radiusBottomLeft":15.03100081501931,
+"radiusBottomRight":15.034404981421897,
+"paddingLeft":0.0,
+"paddingRight":0.0,
+"paddingBottom":10.006131677365229,
+"paddingTop":9.960136747221199,
+"marginTop":0.0,
+"marginBottom":14.973564791065872,
+"marginLeft":14.976930273759336,
+"marginRight":15.012519286150008,
+"bottomBarStyle":"slideEffect",
+"TabBarIndicator":{
+"height":0.0,
+"tabPosition":"bottom",
+"topRightRadius":9.138236789907289,
+"topLeftRadius":9.266948361796246,
+"bottomRightRadius":8.866903346613203,
+"bottomLeftRadius":9.173194264700902,
+"color":"ffffffff",
+"horizontalPadding":6.0,
+"verticalPadding":3.0,
+"strokeWidth":2.0,
+"radius":0.0,
+"distanceFromCenter":0.0,
+"paintingStyle":"stroke"
 },
-"showFloating":true,
-"colorActiveIcon":"ffff2dc6",
-"colorCart":"fff436e6",
-"radiusBottomLeft":0,
-"alwaysShowTabBar":false,
-"marginLeft":0,
-"colorIcon":"fffd3cda",
-"marginBottom":0,
-"paddingLeft":0,
-"marginTop":0
+"TabBarFloating":{
+"position":0,
+"radius":50.0,
+"color":null,
+"location":null,
+"width":50.0,
+"height":50.0,
+"elevation":2.0,
+"floatingType":"rectangle",
+"notchMargin":4.0,
+"isCoverMode":false}
 },
 "ProductDetail":"simpleType",
 "MainColor":null,
@@ -1192,7 +1190,7 @@
 "fontFamily":"CupertinoIcons",
 "pos":100,
 "icon":"home",
-"key":"bzcruLQVUA"
+"key":"vtwVaznQQD"
 },
 {
 "layout":"category",
@@ -1206,7 +1204,7 @@
 "showSearch":false,
 "icon":"rectangle_grid_1x2",
 "categoryLayout":"subCategories",
-"key":"GmvbYOImTm"
+"key":"wCDghaaHvf"
 },
 {
 "layout":"search",
@@ -1214,7 +1212,7 @@
 "size":24,
 "pos":300,
 "icon":"search",
-"key":"YVRnfrXTSw"
+"key":"cvjVeCIoOL"
 },
 {
 "layout":"videos",
@@ -1224,7 +1222,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"videocam_circle_fill",
-"key":"gRgsTkCWxk"
+"key":"IcjZHOmsQB"
 },
 {
 "layout":"wishlist",
@@ -1234,7 +1232,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"arrow_up_bin_fill",
-"key":"ELuXMkwvoS"
+"key":"ZDCHQsqtTV"
 },
 {
 "layout":"dynamic",
@@ -1987,16 +1985,16 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"assets/icons/tabs/icon-heartthin.png",
-"key":"gUtyLtDFyP"
+"key":"NtacxYtNfO"
 },
 {
-"key":"muxEcnrBzo",
 "layout":"list-blog",
 "icon":"assets/icons/tabs/icon-heartthin.png",
-"pos":625,
+"pos":700,
 "defaultTab":false,
 "fullscreen":false,
-"showOriginalColor":false
+"showOriginalColor":false,
+"key":"uOTjjENLpC"
 }
 ],
 "Drawer":{
@@ -2175,4 +2173,4 @@
 },
 "cartIconRadius":12,
 "shuffle":false,
-"key":"SLvJHcVSGp"}}
+"key":"wyYZqNTNGB"}}
