--- a/config_en.json
+++ b/config_en.json
@@ -1004,12 +1004,12 @@
 "enable":true,
 "showMinimize":false,
 "isSafeArea":false,
-"color":"fffa20d3",
+"color":"ff1c1d21",
 "colorCart":"fffe2060",
-"colorIcon":"ffffffff",
-"colorActiveIcon":"ff0a0a0a",
+"colorIcon":null,
+"colorActiveIcon":null,
 "iconSize":22.955647901669458,
-"indicatorStyle":"material",
+"indicatorStyle":"rectangular",
 "showFloatingClip":true,
 "showFloating":false,
 "enableOnTop":false,
@@ -1034,13 +1034,13 @@
 "topLeftRadius":9.266948361796246,
 "bottomRightRadius":8.866903346613203,
 "bottomLeftRadius":9.173194264700902,
-"color":"ffffffff",
-"horizontalPadding":6.0,
-"verticalPadding":3.0,
-"strokeWidth":2.0,
+"color":"ff22262c",
+"horizontalPadding":10.01247069941136,
+"verticalPadding":0.0,
+"strokeWidth":0.0,
 "radius":0.0,
 "distanceFromCenter":0.0,
-"paintingStyle":"stroke"
+"paintingStyle":"fill"
 },
 "TabBarFloating":{
 "position":0,
@@ -1995,6 +1995,121 @@
 "fullscreen":false,
 "showOriginalColor":false,
 "key":"uOTjjENLpC"
+},
+{
+"key":"OtbVVahEtK",
+"layout":"dynamic",
+"icon":"assets/icons/tabs/icon-heartthin.png",
+"pos":720,
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false,
+"configs":{
+"HorizonLayout":[
+{
+"layout":"blog",
+"name":"Blog",
+"enableBackground":false,
+"padding":15.0,
+"innerPadding":5.0,
+"radius":9.0,
+"hideTitle":false,
+"hideAuthor":false,
+"hideDate":false,
+"hideComment":true,
+"showOnlyImage":false,
+"hMargin":6.0,
+"vMargin":0.0,
+"isSnapping":false,
+"cardDesign":"simple",
+"enableAutoSliding":false,
+"imageBorder":3.0,
+"include":[],
+"type":null,
+"pos":100
+},
+{
+"layout":"largeCard",
+"isSnapping":false,
+"rows":1,
+"columns":0,
+"imageBoxfit":"cover",
+"imageRatio":1.2,
+"hMargin":6.0,
+"vMargin":0.0,
+"hPadding":0.0,
+"vPadding":0.0,
+"pos":145,
+"showStockStatus":true,
+"enableRating":true,
+"hideTitle":false,
+"hideStore":false,
+"hidePrice":false,
+"featured":false,
+"showHeart":false,
+"showCartButton":false,
+"cartIconRadius":9.0,
+"showQuantity":false,
+"showCartIconColor":false,
+"showCartIcon":true,
+"enableBottomAddToCart":false,
+"cardDesign":"card",
+"borderRadius":3.0,
+"name":"",
+"image":"",
+"useCircularRadius":true,
+"useSort":false,
+"showCategory":false,
+"order":"asc",
+"orderby":"menu_order",
+"backgroundRadius":10.0,
+"showCountDown":false,
+"onSale":false,
+"hideEmptyProductListRating":false,
+"showOnlyImage":false,
+"showCartButtonWithQuantity":false,
+"parallax":false,
+"parallaxImageRatio":1.2,
+"hideEmptyProductLayout":false,
+"productListItemHeight":110.0,
+"enableAutoSliding":false,
+"productType":false
+},
+{
+"layout":"blog",
+"name":"News",
+"enableBackground":false,
+"padding":16.0,
+"innerPadding":16.0,
+"radius":0.0,
+"hideTitle":false,
+"hideAuthor":false,
+"hideDate":false,
+"hideComment":false,
+"showOnlyImage":false,
+"hMargin":6.0,
+"vMargin":0.0,
+"isSnapping":false,
+"cardDesign":"simple",
+"enableAutoSliding":true,
+"durationAutoSliding":5,
+"imageBorder":3.0,
+"include":[],
+"type":null,
+"pos":200
+}
+]}
+},
+{
+"key":"sjJEXyKtJd",
+"layout":"dynamic",
+"icon":"assets/icons/tabs/icon-heartthin.png",
+"pos":784,
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false,
+"configs":{
+"HorizonLayout":[]}
 }
 ],
 "Drawer":{
