--- a/config_en.json
+++ b/config_en.json
@@ -995,61 +995,8 @@
 }
 ],
 "Setting":{
-"TabBarConfig":{
-"enable":true,
-"showMinimize":false,
-"isSafeArea":true,
-"color":null,
-"colorCart":null,
-"colorIcon":"ff7a7b7f",
-"colorActiveIcon":"ffff672d",
-"iconSize":23.025228226675463,
-"indicatorStyle":"none",
-"showFloatingClip":false,
-"showFloating":true,
-"enableOnTop":false,
-"enableDivider":true,
-"radiusTopLeft":0.0,
-"radiusTopRight":0.0,
-"radiusBottomLeft":0.0,
-"radiusBottomRight":0.0,
-"paddingLeft":0.0,
-"paddingRight":0.0,
-"paddingBottom":0.0,
-"paddingTop":0.0,
-"marginTop":0.0,
-"marginBottom":0.0,
-"marginLeft":0.0,
-"marginRight":0.0,
-"bottomBarStyle":"static",
-"TabBarIndicator":{
-"height":0.0,
-"tabPosition":"bottom",
-"topRightRadius":0.0,
-"topLeftRadius":0.0,
-"bottomRightRadius":0.0,
-"bottomLeftRadius":0.0,
-"color":null,
-"horizontalPadding":0.0,
-"verticalPadding":0.0,
-"strokeWidth":0.0,
-"radius":0.0,
-"distanceFromCenter":0.0,
-"paintingStyle":"fill"
-},
-"TabBarFloating":{
-"position":2,
-"radius":50.0,
-"color":"ffff672d",
-"location":"centerDocked",
-"width":70.261694164508,
-"height":70.44671253505518,
-"elevation":9.899225224105551,
-"floatingType":"diamond",
-"notchMargin":4.0,
-"isCoverMode":false}
-},
-"ProductDetail":"simpleType",
+"FontFamily":"Roboto",
+"FontHeader":"Raleway",
 "MainColor":null,
 "ShowChat":true,
 "AgeRestriction":{
@@ -1177,7 +1124,62 @@
 },
 "enable":false}
 },
-"StickyHeader":true
+"StickyHeader":true,
+"TabBarConfig":{
+"enable":true,
+"showMinimize":false,
+"isSafeArea":true,
+"color":null,
+"colorCart":"fffe2060",
+"colorIcon":"ff7a7b7f",
+"colorActiveIcon":"ff1d34c5",
+"iconSize":23.025228226675463,
+"indicatorStyle":"material",
+"showFloatingClip":true,
+"showFloating":true,
+"enableOnTop":false,
+"enableDivider":true,
+"radiusTopLeft":0.0,
+"radiusTopRight":0.0,
+"radiusBottomLeft":0.0,
+"radiusBottomRight":0.0,
+"paddingLeft":0.0,
+"paddingRight":0.0,
+"paddingBottom":0.0,
+"paddingTop":0.0,
+"marginTop":0.0,
+"marginBottom":0.0,
+"marginLeft":0.0,
+"marginRight":0.0,
+"bottomBarStyle":"static",
+"TabBarIndicator":{
+"height":0.0,
+"tabPosition":"top",
+"topRightRadius":0.0,
+"topLeftRadius":0.0,
+"bottomRightRadius":9.988863169703269,
+"bottomLeftRadius":9.980371609191021,
+"color":"ff1d34c5",
+"horizontalPadding":0.0,
+"verticalPadding":0.0,
+"strokeWidth":0.0,
+"radius":0.0,
+"distanceFromCenter":0.0,
+"paintingStyle":"fill"
+},
+"TabBarFloating":{
+"position":0,
+"radius":50.0,
+"color":"fffafafa",
+"location":"startDocked",
+"width":50.0,
+"height":50.0,
+"elevation":2.005172228538149,
+"floatingType":"rectangle",
+"notchMargin":6.0,
+"isCoverMode":false}
+},
+"ProductDetail":"simpleType"
 },
 "TabBar":[
 {
@@ -1185,7 +1187,7 @@
 "fontFamily":"CupertinoIcons",
 "pos":100,
 "icon":"home",
-"key":"qjvZUsMsZK"
+"key":"cJmrWdfrDk"
 },
 {
 "layout":"category",
@@ -1199,7 +1201,7 @@
 "showSearch":false,
 "icon":"rectangle_grid_1x2",
 "categoryLayout":"subCategories",
-"key":"eninydKRXL"
+"key":"XCxUQIBQbM"
 },
 {
 "layout":"search",
@@ -1207,7 +1209,7 @@
 "size":24,
 "pos":300,
 "icon":"search",
-"key":"MHsLTPpgfH"
+"key":"QzntheDHPc"
 },
 {
 "layout":"videos",
@@ -1217,7 +1219,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"videocam_circle_fill",
-"key":"bFqjRMDgcx"
+"key":"KVwEoYemqu"
 },
 {
 "layout":"wishlist",
@@ -1227,7 +1229,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"arrow_up_bin_fill",
-"key":"HIkbtRppNL"
+"key":"LFffeIPbDZ"
 }
 ],
 "Drawer":{
