--- a/config_en.json
+++ b/config_en.json
@@ -1152,6 +1152,7 @@
 "marginLeft":0.0,
 "marginRight":0.0,
 "bottomBarStyle":"static",
+"alwaysShowTabBar":false,
 "TabBarIndicator":{
 "height":0.0,
 "tabPosition":"top",
@@ -1170,12 +1171,12 @@
 "TabBarFloating":{
 "position":0,
 "radius":50.0,
-"color":"fffafafa",
+"color":"3ffffff",
 "location":"startDocked",
 "width":50.0,
 "height":50.0,
-"elevation":2.005172228538149,
-"floatingType":"rectangle",
+"elevation":5.0,
+"floatingType":"diamond",
 "notchMargin":6.0,
 "isCoverMode":false}
 },
