--- a/config_en.json
+++ b/config_en.json
@@ -1151,7 +1151,7 @@
 "marginBottom":0.0,
 "marginLeft":0.0,
 "marginRight":0.0,
-"bottomBarStyle":"static",
+"bottomBarStyle":"slideEffect",
 "alwaysShowTabBar":false,
 "TabBarIndicator":{
 "height":0.0,
@@ -1166,18 +1166,18 @@
 "strokeWidth":0.0,
 "radius":0.0,
 "distanceFromCenter":0.0,
-"paintingStyle":"fill"
+"paintingStyle":"stroke"
 },
 "TabBarFloating":{
 "position":0,
 "radius":50.0,
-"color":"3ffffff",
+"color":"ffffffff",
 "location":"startDocked",
 "width":50.0,
 "height":50.0,
-"elevation":5.0,
-"floatingType":"diamond",
-"notchMargin":6.0,
+"elevation":0.0,
+"floatingType":"rectangle",
+"notchMargin":0.0,
 "isCoverMode":false}
 },
 "ProductDetail":"simpleType"
