--- a/config_en.json
+++ b/config_en.json
@@ -995,8 +995,64 @@
 }
 ],
 "Setting":{
+"TabBarConfig":{
+"enable":true,
+"showMinimize":false,
+"isSafeArea":true,
+"color":null,
+"colorCart":"fffe2060",
+"colorIcon":"ff7a7b7f",
+"colorActiveIcon":"ff1d34c5",
+"iconSize":23.025228226675463,
+"indicatorStyle":"material",
+"showFloatingClip":false,
+"showFloating":true,
+"enableOnTop":false,
+"enableDivider":true,
+"radiusTopLeft":0.0,
+"radiusTopRight":0.0,
+"radiusBottomLeft":0.0,
+"radiusBottomRight":0.0,
+"paddingLeft":0.0,
+"paddingRight":0.0,
+"paddingBottom":0.0,
+"paddingTop":0.0,
+"marginTop":0.0,
+"marginBottom":0.0,
+"marginLeft":0.0,
+"marginRight":0.0,
+"bottomBarStyle":"static",
+"alwaysShowTabBar":false,
+"TabBarIndicator":{
+"height":0.0,
+"tabPosition":"top",
+"topRightRadius":0.0,
+"topLeftRadius":0.0,
+"bottomRightRadius":9.988863169703269,
+"bottomLeftRadius":9.980371609191021,
+"color":"ff1d34c5",
+"horizontalPadding":0.0,
+"verticalPadding":0.0,
+"strokeWidth":0.0,
+"radius":0.0,
+"distanceFromCenter":0.0,
+"paintingStyle":"stroke"
+},
+"TabBarFloating":{
+"position":0,
+"radius":0.0,
+"color":"3ffffff",
+"location":"startDocked",
+"width":50.0,
+"height":50.0,
+"elevation":0.0,
+"floatingType":"rectangle",
+"notchMargin":2.0,
+"isCoverMode":true}
+},
 "FontFamily":"Roboto",
 "FontHeader":"Raleway",
+"ProductDetail":"simpleType",
 "MainColor":null,
 "ShowChat":true,
 "AgeRestriction":{
@@ -1124,63 +1180,7 @@
 },
 "enable":false}
 },
-"StickyHeader":true,
-"TabBarConfig":{
-"enable":true,
-"showMinimize":false,
-"isSafeArea":true,
-"color":null,
-"colorCart":"fffe2060",
-"colorIcon":"ff7a7b7f",
-"colorActiveIcon":"ff1d34c5",
-"iconSize":23.025228226675463,
-"indicatorStyle":"material",
-"showFloatingClip":false,
-"showFloating":true,
-"enableOnTop":false,
-"enableDivider":true,
-"radiusTopLeft":0.0,
-"radiusTopRight":0.0,
-"radiusBottomLeft":0.0,
-"radiusBottomRight":0.0,
-"paddingLeft":0.0,
-"paddingRight":0.0,
-"paddingBottom":0.0,
-"paddingTop":0.0,
-"marginTop":0.0,
-"marginBottom":0.0,
-"marginLeft":0.0,
-"marginRight":0.0,
-"bottomBarStyle":"static",
-"alwaysShowTabBar":false,
-"TabBarIndicator":{
-"height":0.0,
-"tabPosition":"top",
-"topRightRadius":0.0,
-"topLeftRadius":0.0,
-"bottomRightRadius":9.988863169703269,
-"bottomLeftRadius":9.980371609191021,
-"color":"ff1d34c5",
-"horizontalPadding":0.0,
-"verticalPadding":0.0,
-"strokeWidth":0.0,
-"radius":0.0,
-"distanceFromCenter":0.0,
-"paintingStyle":"stroke"
-},
-"TabBarFloating":{
-"position":0,
-"radius":50.0,
-"color":"ffffffff",
-"location":"startDocked",
-"width":50.0,
-"height":50.0,
-"elevation":2.0,
-"floatingType":"circle",
-"notchMargin":2.0,
-"isCoverMode":true}
-},
-"ProductDetail":"simpleType"
+"StickyHeader":true
 },
 "TabBar":[
 {
@@ -1188,7 +1188,7 @@
 "fontFamily":"CupertinoIcons",
 "pos":100,
 "icon":"home",
-"key":"cJmrWdfrDk"
+"key":"zDJlUAGLIV"
 },
 {
 "layout":"category",
@@ -1202,7 +1202,7 @@
 "showSearch":false,
 "icon":"rectangle_grid_1x2",
 "categoryLayout":"subCategories",
-"key":"XCxUQIBQbM"
+"key":"EQapGeloiI"
 },
 {
 "layout":"search",
@@ -1210,7 +1210,7 @@
 "size":24,
 "pos":300,
 "icon":"search",
-"key":"QzntheDHPc"
+"key":"BzgsaulLyL"
 },
 {
 "layout":"videos",
@@ -1220,7 +1220,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"videocam_circle_fill",
-"key":"KVwEoYemqu"
+"key":"IXKMIPQHqr"
 },
 {
 "layout":"wishlist",
@@ -1230,7 +1230,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"arrow_up_bin_fill",
-"key":"LFffeIPbDZ"
+"key":"gptmltvbMh"
 }
 ],
 "Drawer":{
