--- a/config_en.json
+++ b/config_en.json
@@ -1043,8 +1043,8 @@
 "radius":0.0,
 "color":"3ffffff",
 "location":"startDocked",
-"width":50.0,
-"height":50.0,
+"width":56.00000000000001,
+"height":54.0,
 "elevation":0.0,
 "floatingType":"rectangle",
 "notchMargin":2.0,
