--- a/config_en.json
+++ b/config_en.json
@@ -1072,22 +1072,14 @@
 "closePosition":"bottomCenter",
 "updatedTime":1661314494281,
 "data":{
-"boxShadow":null,
-"parallax":false,
-"enableParallax":false,
-"enableBackground":false,
-"isHorizontal":false,
-"marginLeft":0,
 "layout":"bannerImage",
-"fit":"fitHeight",
-"marginRight":0,
-"parallaxImageRatio":1.2,
 "design":"static",
-"marginBottom":10,
+"fit":"fitHeight",
+"marginLeft":0.0,
 "items":[
 {
 "image":"https://i.imgur.com/ZL1LO75.png",
-"padding":0,
+"padding":0.0,
 "bannerWithProduct":false,
 "showSubcategory":false,
 "video":"",
@@ -1096,9 +1088,17 @@
 "products":[]
 }
 ],
-"marginTop":10,
-"key":"pOvHnpotIG",
-"height":0.45
+"marginBottom":10.0,
+"height":0.45,
+"marginRight":0.0,
+"marginTop":10.0,
+"enableParallax":false,
+"parallaxImageRatio":1.2,
+"isHorizontal":false,
+"enableBackground":false,
+"parallax":false,
+"boxShadow":null,
+"key":"czZtoiVGXP"
 },
 "enable":true,
 "alwaysShowUponOpen":true
@@ -1107,8 +1107,8 @@
 "canClose":true,
 "data":{
 "layout":"button",
-"marginBottom":0,
-"alignment":"topRight",
+"marginBottom":43,
+"alignment":"topLeft",
 "enableBackground":false,
 "items":[
 {
@@ -1127,58 +1127,111 @@
 "marginLeft":0
 }
 ],
-"marginTop":73,
-"key":"KYKTmBlTSs"
+"marginTop":40,
+"key":"DROmaOXPdV"
 },
 "enable":true,
-"width":159,
+"width":173,
 "canDrag":true,
-"height":173
+"height":190
 },
 "sticky":{
 "data":{
-"boxShadow":null,
-"parallax":false,
-"doubleTapToFullScreen":false,
-"enableBackground":false,
-"isHorizontal":false,
-"fit":"fitWidth",
-"marginRight":5,
-"isBlur":false,
-"parallaxImageRatio":1.2,
-"showNumber":false,
-"design":"default",
-"showBackground":false,
-"radius":6,
-"enableTimeIndicator":true,
-"key":"TFACYECDCJ",
-"height":0.15,
-"intervalTime":3,
-"padding":0,
-"upHeight":0,
-"pageIndicatorType":"line",
-"isSlider":true,
-"isSoundOn":false,
-"enableParallax":false,
-"autoPlayVideo":false,
-"marginLeft":5,
 "layout":"bannerImage",
-"marginBottom":5,
-"autoPlay":true,
+"design":"swiper",
+"fit":"cover",
+"marginLeft":null,
 "items":[
 {
-"image":"https://i.imgur.com/LUaEM3v.jpeg",
+"image":"https://i.imgur.com/ZhDXYkZ.gif",
 "bannerWithProduct":false,
 "showSubcategory":false,
-"video":"",
-"blog":"halfprice",
 "defaultShowProduct":false,
-"products":[]
+"products":[],
+"video":""
+},
+{
+"image":"https://i.imgur.com/jSyDtDq.gif",
+"showSubcategory":false,
+"bannerWithProduct":false,
+"defaultShowProduct":false,
+"products":[],
+"coupon":"",
+"video":""
+},
+{
+"image":"https://i.imgur.com/SNl32jX.gif",
+"showSubcategory":false,
+"bannerWithProduct":false,
+"defaultShowProduct":false,
+"products":[],
+"screen":"login",
+"video":""
+},
+{
+"image":"https://i.imgur.com/zJlGTf6.gif",
+"showSubcategory":false,
+"bannerWithProduct":false,
+"defaultShowProduct":false,
+"products":[],
+"screen":"search",
+"video":""
+},
+{
+"image":"https://i.imgur.com/Um59HX7.gif",
+"showSubcategory":false,
+"bannerWithProduct":false,
+"defaultShowProduct":false,
+"products":[],
+"tab":"videos",
+"video":""
+},
+{
+"image":"https://i.imgur.com/lsfPeaP.gif",
+"showSubcategory":false,
+"bannerWithProduct":false,
+"defaultShowProduct":false,
+"products":[],
+"tab":"wishlist",
+"video":""
+},
+{
+"image":"https://i.imgur.com/ImYVhbT.gif",
+"showSubcategory":false,
+"bannerWithProduct":false,
+"defaultShowProduct":false,
+"products":[],
+"tab":"category",
+"video":""
 }
 ],
-"marginTop":5
+"marginBottom":1.0,
+"height":0.1,
+"marginRight":null,
+"marginTop":1.0,
+"radius":3.3,
+"padding":0.0,
+"enableParallax":false,
+"parallaxImageRatio":1.2,
+"isHorizontal":false,
+"enableBackground":false,
+"isSlider":true,
+"autoPlay":true,
+"intervalTime":4,
+"showNumber":false,
+"isBlur":false,
+"showBackground":false,
+"upHeight":0.0,
+"isSoundOn":false,
+"enableTimeIndicator":true,
+"autoPlayVideo":false,
+"doubleTapToFullScreen":false,
+"pageIndicatorType":"line",
+"parallax":false,
+"boxShadow":null,
+"key":"pKkVlfMArM"
 },
-"enable":false}
+"enable":true}
 },
 "StickyHeader":true
 },
@@ -1188,21 +1241,22 @@
 "fontFamily":"CupertinoIcons",
 "pos":100,
 "icon":"home",
-"key":"zDJlUAGLIV"
+"key":"zsprUCZKme"
 },
 {
+"key":"SLasnSYJjF",
 "layout":"category",
-"parallaxImageRatio":1.2,
-"fontFamily":"CupertinoIcons",
-"visible":true,
-"fullscreen":false,
-"pos":200,
-"showOriginalColor":false,
-"parallax":true,
-"showSearch":false,
 "icon":"rectangle_grid_1x2",
-"categoryLayout":"subCategories",
-"key":"EQapGeloiI"
+"fontFamily":"CupertinoIcons",
+"pos":200,
+"visible":true,
+"defaultTab":false,
+"fullscreen":false,
+"showOriginalColor":false,
+"categoryLayout":"sideMenu",
+"parallax":true,
+"parallaxImageRatio":1.2,
+"showSearch":true
 },
 {
 "layout":"search",
@@ -1210,7 +1264,7 @@
 "size":24,
 "pos":300,
 "icon":"search",
-"key":"BzgsaulLyL"
+"key":"DjtJQqxwce"
 },
 {
 "layout":"videos",
@@ -1220,7 +1274,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"videocam_circle_fill",
-"key":"IXKMIPQHqr"
+"key":"JNnRshPnmm"
 },
 {
 "layout":"wishlist",
@@ -1230,7 +1284,7 @@
 "showOriginalColor":false,
 "defaultTab":false,
 "icon":"arrow_up_bin_fill",
-"key":"gptmltvbMh"
+"key":"CMiHrDMgxE"
 }
 ],
 "Drawer":{
